--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "SchoolContext": "Host=localhost;Port=5432;Database=StudentDB;Username=postgres;Password=2043"
+    "SchoolContext": "Host=localhost;Port=5432;Database=your_db_name;Username=postgres;Password=your_password"
   } 
 }
 
